modify subdevice driver

--- a/faq/常见问题.md
+++ b/faq/常见问题.md
@@ -1,5 +1,11 @@
 # 常见问题
 
-1. UIoT Edge未来会支持的官方子设备驱动有哪些？
-2. UIoT Edge函数计算未来会支持哪些内置函数？
+1. UIoT Edge现在支持的官方子设备驱动有哪些？未来还有什么规划？
+2. UIoT Edge函数计算现在支持哪些内置函数？
+3. 子设备上云，需要的最少配置什么？
+4. 如何实现本地子设备联动？
+5. 如何配置，实现断点续传？
+6. 如果要开发自己的子设备驱动，如何做？
+7. 如何实现网关设备替换？
+8. UIoT Edge支持的最低硬件配置是什么？
 
