--- a/api_list/子设备接入协议.md
+++ b/api_list/子设备接入协议.md
@@ -3,7 +3,7 @@
 | 原因                         | apierror                | RetCode | Message                                                      |
 | ---------------------------- | ----------------------- | ------- | ------------------------------------------------------------ |
 | 服务不可用                   | ServiceUnavailable      | 130     | Service is temporarily unavailable, we are working hard to restore it, please retry later |
-| 消息非Json格式               | InvalidJsonMessage      | 100090  | Message is not valid json                                    |
+| 消息非json格式               | InvalidJsonMessage      | 100090  | Message is not valid json                                    |
 | 设备类型错误，非网关或子设备 | DeviceTypeError         | 100080  | Device type error                                            |
 | 产品序列号不存在             | ProductSNNotExist       | 100003  | Product sn not exist                                         |
 | 设备序列号不存在             | DeviceNotExist          | 100008  | Device not exist                                             |
